--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,5 @@
 	"css.validate": false,
 	"typescript.tsdk": "node_modules/typescript/lib",
 	"css.customData": [".vscode/tailwindcss.json"],
-	"vue3snippets.enable-compile-vue-file-on-did-save-code": false
+	"vue3snippets.enable-compile-vue-file-on-did-save-code": true
 }
