--- a/package.json
+++ b/package.json
@@ -18,5 +18,14 @@
     "sass-loader": "^13.3.2",
     "tailwindcss": "^3.3.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@nuxtjs/sanity": "^1.8.1",
+    "@pinia/nuxt": "^0.4.11",
+    "@portabletext/to-html": "^2.0.0",
+    "@sanity/client": "^6.4.4",
+    "@tailwindcss/nesting": "^0.0.0-insiders.565cd3e",
+    "htm": "^3.1.1",
+    "pinia": "^2.1.6",
+    "vhtml": "^2.2.0"
+  }
 }
