--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@pinia/nuxt": "^0.4.11",
 		"@portabletext/to-html": "^2.0.0",
 		"@tailwindcss/nesting": "^0.0.0-insiders.565cd3e",
+		"@vueuse/motion": "^2.0.0",
 		"htm": "^3.1.1",
 		"pinia": "^2.1.6",
 		"vhtml": "^2.2.0"
