--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"@vueuse/motion": "^2.0.0",
 		"htm": "^3.1.1",
 		"pinia": "^2.1.6",
-		"vhtml": "^2.2.0"
+		"vhtml": "^2.2.0",
+		"vue3-carousel": "^0.3.1"
 	}
 }
