--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"tailwindcss": "^3.3.2"
 	},
 	"dependencies": {
+		"@headlessui/vue": "^1.7.16",
 		"@nuxtjs/sanity": "^1.8.1",
 		"@pinia/nuxt": "^0.4.11",
 		"@portabletext/to-html": "^2.0.0",
