--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"postinstall": "nuxt prepare"
 	},
 	"devDependencies": {
+		"@heroicons/vue": "^2.0.18",
 		"@nuxt/devtools": "latest",
 		"@types/node": "^18",
 		"autoprefixer": "^10.4.14",
