--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"@tailwindcss/nesting": "^0.0.0-insiders.565cd3e",
 		"@vueuse/motion": "^2.0.0",
 		"htm": "^3.1.1",
+		"nuxt-mail": "^4.0.1",
 		"pinia": "^2.1.6",
 		"vhtml": "^2.2.0",
 		"vue3-carousel": "^0.3.1"
