--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
 		"postcss": "^8.4.25",
 		"sass": "^1.63.6",
 		"sass-loader": "^13.3.2",
-		"tailwindcss": "^3.3.2"
+		"tailwindcss": "^3.3.2",
+		"vue-i18n": "^9.5.0"
 	},
 	"dependencies": {
 		"@headlessui/vue": "^1.7.16",
