--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"@vueuse/motion": "^2.0.0",
 		"htm": "^3.1.1",
 		"nuxt-mail": "^4.0.1",
+		"nuxt-swiper": "^1.2.2",
 		"pinia": "^2.1.6",
 		"vhtml": "^2.2.0",
 		"vue3-carousel": "^0.3.1"
